// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header component should render a header component with default values 1`] = `
<div>
  <header
    class="svelte-1pkjfof"
  >
    <div
      class="info svelte-1pkjfof"
    >
      <div
        class="info__count"
      >
        <span
          class="value svelte-1pkjfof"
        >
          0
        </span>
         
        <span
          class="label svelte-1pkjfof"
        >
          content items
        </span>
      </div>
       
      <div
        class="divider vertical svelte-mi6et7"
      />
       
      <div
        class="repo-folder-wrap svelte-1pkjfof"
      >
        <span
          class="label repo-folder svelte-1pkjfof"
        >
          Repo / folder
        </span>
         
        <span
          class="value path svelte-1pkjfof"
          title="all"
        >
          all
        </span>
      </div>
    </div>
     
    <div
      class="divider horizontal svelte-mi6et7"
    />
  </header>
</div>
`;

exports[`header component should render a header component with values 1`] = `
<div>
  <header
    class="svelte-1pkjfof"
  >
    <div
      class="info svelte-1pkjfof"
    >
      <div
        class="info__count"
      >
        <span
          class="value svelte-1pkjfof"
        >
          0
        </span>
         
        <span
          class="label svelte-1pkjfof"
        >
          content items
        </span>
      </div>
       
      <div
        class="divider vertical svelte-mi6et7"
      />
       
      <div
        class="repo-folder-wrap svelte-1pkjfof"
      >
        <span
          class="label repo-folder svelte-1pkjfof"
        >
          Repo / folder
        </span>
         
        <span
          class="value path svelte-1pkjfof"
          title="CONTENT_ITEMS_PATH"
        >
          CONTENT_ITEMS_PATH
        </span>
      </div>
    </div>
     
    <div
      class="divider horizontal svelte-mi6et7"
    />
  </header>
</div>
`;
